SSC-2176 search cruise, fix alignment

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-search-cruise.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-search-cruise.less
@@ -104,6 +104,8 @@
 
         @media screen and (max-width: @screen-sm) {
             background: @grey--fa;
+            margin: 0 -15px;
+            padding: 25px 15px;
         }
 
         h3 {
